# class_11_autoEncoders

./: pyproject.toml
notebooks/: auto_encoders.ipynb  auto_encoders_mnist.ipynb
scripts/: ae_vs_pca.py
